# heracls

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: train.py
heracls/: __init__.py  cli.py  core.py  patch.py  transforms.py  typing.py
tests/: test_all.py  test_transforms.py
